<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PerfilDuenio">

    <!-- CABECERA SUPERIOR -->
    <LinearLayout
        android:id="@+id/topHeader"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/titlePerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl4Title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>



    <!-- CONTENIDO CON SCROLL-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="24dp"
        android:fillViewport="false"
        app:layout_constraintTop_toBottomOf="@id/topHeader"
        app:layout_constraintBottom_toTopOf="@+id/bottomSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <!-- FOTO DE PERFIL -->
            <FrameLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/perfilImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/foto_perfil"
                    android:padding="0dp" />

                <ImageView
                    android:id="@+id/btnCamera"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:src="@drawable/subir"
                    android:elevation="4dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="6dp" />
            </FrameLayout>

            <!-- NOMBRE COMPLETO -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl4Name"
                android:textColor="@color/black"
                android:layout_marginTop="32dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inp4Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- DIRECCIÓN -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl4Direction"
                android:textColor="@color/black"
                android:layout_marginTop="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_location_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inp4Direction" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TELÉFONO -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl4Phone"
                android:textColor="@color/black"
                android:layout_marginTop="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inp4Phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- CHECKBOX -->
            <CheckBox
                android:id="@+id/checkTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/cb4Terms" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



    <!-- SECCIÓN INFERIOR -->
    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="12dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl4Steps"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <!-- PROGRESS BAR -->
        <ProgressBar
            android:id="@+id/progressSteps"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginTop="8dp"
            android:progress="50"
            android:max="100" />

        <!-- BOTÓN -->
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/btn4Next"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/blue_text"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
